force-app/main/default/objects/List_of_Values__c.object
<CustomObject>
    <description>Generic container for Callista Reference Data

When querying, check active flags and record type for records relevant to the usage.</description>
    <fields>
        <fullName>Applicant_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Value__c</fullName>
        <label>Applicant Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Level_1__c</fullName>
        <label>Category Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Level_2__c</fullName>
        <label>Category Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <label>Enquiry Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_Code__c</fullName>
        <description>Additional information for some record types</description>
        <label>Government Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_System_Code__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active System Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome_Path__c</fullName>
        <label>Outcome Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_CodeReason__c</fullName>
        <description>Code and Reason Formula field. Course Discontinuation SS-69</description>
        <formula>System_Code__c + &apos; - &apos; + Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Code_Description__c</fullName>
        <description>Description of the system code value</description>
        <label>System Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Code__c</fullName>
        <description>Field to describe Main Category</description>
        <label>System Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeMergeField__c</fullName>
        <formula>Enquiry_Type__c + &apos; &gt; &apos; + Category_Level_1__c + &apos; &gt; &apos; + Category_Level_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>A record type for each list of values

Lookups to this table should filter on type, as well as the active flag</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Of Residency Faculty Name</fullName>
                </value>
                <value>
                    <fullName>Change Of Residency Visa Subclass</fullName>
                </value>
                <value>
                    <fullName>ADM_CNDTNL_OFFER_STATUS</fullName>
                    <label>Conditional Offer Response</label>
                </value>
                <value>
                    <fullName>ADM_DOC_STATUS</fullName>
                    <label>Documentation</label>
                </value>
                <value>
                    <fullName>ADM_ENTRY_QUAL_STATUS</fullName>
                    <label>Entry Qualification</label>
                </value>
                <value>
                    <fullName>ADM_OFFER_RESP_STATUS</fullName>
                    <label>Offer Response</label>
                </value>
                <value>
                    <fullName>ADM_OFFER_DFRMNT_STATUS</fullName>
                    <label>Offer Deferment</label>
                </value>
                <value>
                    <fullName>ADM_OUTCOME_STATUS</fullName>
                    <label>Outcome</label>
                </value>
                <value>
                    <fullName>Intermission Reason</fullName>
                </value>
                <value>
                    <fullName>SS_DiscontinuationReason</fullName>
                    <label>Discontinuation Reason</label>
                </value>
                <value>
                    <fullName>CaseCategorisation</fullName>
                    <default>true</default>
                    <label>CaseCategorisation</label>
                </value>
                <value>
                    <fullName>Reason for COE</fullName>
                </value>
                <value>
                    <fullName>Student Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Non user field
Combination of Value and System Code to allow upserts</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value supplied to Callista via the integrations

Unique within a type</description>
        <label>Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>List of Values</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <columns>System_Code__c</columns>
        <columns>System_Code_Description__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Active_System_Code__c</columns>
        <columns>Applicant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Outcome</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <columns>System_Code__c</columns>
        <columns>System_Code_Description__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Active_System_Code__c</columns>
        <columns>Applicant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ADM_OUTCOME_STATUS</value>
        </filters>
        <label>Outcome</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List of Values</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>